--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <h2>Skills</h2>
         <ul>
             <li>Full stack Web Developer:⭐⭐⭐⭐⭐</li>
-            <li>Master in c lang.:⭐⭐⭐⭐</li>            
+            <li>C lang:⭐⭐⭐⭐</li>            
         </ul>
         <hr />
         <h2>Awards and Certifications</h2>
         <ul>
-            <li>Udemy Bootcamp Certification</li>
+            <li>Udemy Bootcamp Certificate</li>
         </ul>
         <hr />
         <h2>Other</h2>
