--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Vaibhav Janekar</h1>
-        <img src="../../../Pictures/gamingDp.png" alt="profile phtoto" />
+        <img src="https://www.peakpx.com/en/search?q=squid+game" alt="profile phtoto" />
         <h2>Quick Intro</h2>
         <p>I am BCA Student. with strong passion for coding.My Goal is to contrubete in world thorught the Coding </p>
         <hr />
