--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Vaibhav Janekar</h1>
-        <img src="https://img2.wallspic.com/previews/4/9/4/6/6/166494/166494-squid_game-x750.jpg" alt="profile phtoto" height="150" width="150" />
+        <img src="https://img2.wallspic.com/previews/4/9/4/6/6/166494/166494-squid_game-x750.jpg" alt="profile phtoto" height="200" width="200" />
         <h2>Quick Intro</h2>
-        <p>I am BCA Student. with strong passion for coding.My Goal is to contrubete in world thorught the Coding </p>
+        <p>I am BCA Student. with strong passion for coding.My Goal is to contribute in world thorught the Coding </p>
         <hr />
         <h2>Education/Qualification</h2>
         <ul>
