--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <h3>My Contact Details</h3>
-<p>My Fictional Address
-9856552455
+<p>My Fictional Address<br />
+9856552455<br />
 vj.janekar@gmail.com
 </p>
