--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <h1>Vaibhav Janekar</h1>
         <img src="https://img2.wallspic.com/previews/4/9/4/6/6/166494/166494-squid_game-x750.jpg" alt="profile phtoto" height="200" width="200" />
         <h2>Quick Intro</h2>
-        <p>I am BCA Student. with strong passion for coding.My Goal is to contribute in world thorught the Coding </p>
+        <p>I am BCA Student. with strong passion for coding.My Goal is to contribute in world through the Coding. </p>
         <hr />
         <h2>Education/Qualification</h2>
         <ul>
-            <li>Bachelor of Application - Pune-University(2023-2026)</li>
+            <li>Bachelor of Computer Application - Pune-University(2023-2026)</li>
         </ul>
         <hr />
         <h2>Work Experince</h2>
@@ -29,9 +29,9 @@
         <hr />
         <h2>Skills</h2>
         <ul>
-            <li>Full stack Web Developer:⭐⭐⭐⭐⭐</li>
+            <li>Full stack Web Developer:⭐⭐⭐</li>
             <li>C lang:⭐⭐⭐⭐</li>
-             <li> c++:⭐⭐</li>        
+             <li> c++:⭐</li>        
         </ul>
         <hr />
         <h2>Awards and Certifications</h2>
