--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Other</h2>
         <ul>
             <a href="./public.html"><li>My Hobbies</li></a></li>
-            <a href="./contact.html"><li>My Contact Me</li></a></li>        
+            <a href="./contact.html"><li>Contact Me</li></a></li>        
         </ul>
         <p>© Vaibhav Janekar. All rights reserved.</p>
     </body>
