--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <h3>My Contact Details</h3>
-<p>My Fictional Address<br />
-9856552455<br />
-vj.janekar@gmail.com
+<p>My Fictional Address:Bhikharam, Harisingh Nagar,<br />
+ Gilakor gaav se 1 km pehle right side <br />
+ 9856552455<br />
+ vj.janekar@gmail.com
 </p>
